--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,258 @@
-tensorflow 
-scipy
-numpy
-pyimgur
-forex_python
-flask
-imutils
+absl-py==0.2.2
+alabaster==0.7.11
+anaconda-client==1.6.14
+anaconda-navigator==1.8.4
+anaconda-project==0.8.2
+aniso8601==3.0.2
+apiai==1.2.3
+appnope==0.1.0
+appscript==1.0.1
+asn1crypto==0.24.0
+astor==0.6.2
+astroid==1.6.5
+astropy==3.0.3
+atomicwrites==1.1.5
+attrs==18.1.0
+Babel==2.6.0
+backcall==0.1.0
+backports.shutil-get-terminal-size==1.0.0
+beautifulsoup4==4.6.0
+bitarray==0.8.2
+bkcharts==0.2
+blaze==0.11.3
+bleach==1.5.0
+bokeh==0.13.0
+boto==2.48.0
+Bottleneck==1.2.1
+breadability==0.1.20
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+cloudpickle==0.5.3
+clyent==1.2.2
+colorama==0.3.9
+conda==4.5.4
+conda-build==3.10.9
+conda-verify==2.0.0
+contextlib2==0.5.5
+coremltools==0.8
+cryptography==2.2.2
+cycler==0.10.0
+Cython==0.28.3
+cytoolz==0.9.0.1
+dask==0.18.1
+datashape==0.5.4
+dateparser==0.7.0
+decorator==4.3.0
+distributed==1.22.0
+docopt==0.6.2
+docutils==0.14
+entrypoints==0.2.3
+et-xmlfile==1.0.1
+fake-useragent==0.1.10
+fastcache==1.0.2
+fbchat==1.3.9
+filelock==3.0.4
+Flask==1.0.2
+Flask-Cors==3.0.6
+Flask-RESTful==0.3.6
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.2
+forex-python==1.1
+future==0.16.0
+gast==0.2.0
+geocoder==1.38.1
+geographiclib==1.49
+geopy==1.14.0
+gevent==1.3.4
+glob2==0.6
+gmpy2==2.0.8
+google==2.0.1
+Google-Search-API==1.1.14
+graphviz==0.8.4
+greenlet==0.4.13
+grpcio==1.13.0
+gunicorn==19.9.0
+h5py==2.8.0
+heapdict==1.0.0
+html5lib==0.9999999
+idna==2.6
+imageio==2.3.0
+imagesize==1.0.0
+imutils==0.4.6
+inflect==0.3.1
+ipykernel==4.8.2
+ipython==6.4.0
+ipython-genutils==0.2.0
+ipywidgets==7.2.1
+isort==4.3.4
+itsdangerous==0.24
+itunespy==1.5.5
+jaraco.itertools==2.3
+jdcal==1.4
+jedi==0.12.0
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+jupyterlab==0.32.1
+jupyterlab-launcher==0.10.5
+kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
+llvmlite==0.23.2+1.g67a89c7
+locket==0.2.0
+lxml==4.1.1
+Markdown==2.6.11
+MarkupSafe==1.0
+matplotlib==1.5.1
+mccabe==0.6.1
+mistune==0.8.3
+mkl-fft==1.0.0
+mkl-random==1.0.1
+more-itertools==4.2.0
+mpmath==1.0.0
+msgpack==0.5.6
+msgpack-python==0.5.6
+multidict==4.3.1
+multipledispatch==0.5.0
+mxnet==1.1.0.post0
+navigator-updater==0.2.0
+nbconvert==5.3.1
+nbformat==4.4.0
+networkx==2.1
+nltk==3.3
+nose==1.3.7
+notebook==5.5.0
+numba==0.38.1+1.gc42707d0f.dirty
+numexpr==2.6.5
+numpy==1.14.3
+numpydoc==0.8.0
+odo==0.5.1
+olefile==0.45.1
+opencv-python==3.4.1.15
+openpyxl==2.5.4
+packaging==17.1
+pandas==0.23.1
+pandocfilters==1.4.2
+parso==0.2.1
+partd==0.3.8
+path.py==11.0.1
+pathlib2==2.3.2
+patsy==0.5.0
+pbr==4.1.0
+pep8==1.7.1
+pexpect==4.6.0
+pickleshare==0.7.4
+Pillow==3.4.2
+pipenv==2018.7.1
+pkginfo==1.4.2
+pluggy==0.6.0
+ply==3.11
+prettytable==0.7.2
+prompt-toolkit==1.0.15
+protobuf==3.6.0
+psutil==5.4.6
+ptyprocess==0.6.0
+py==1.5.3
+pycodestyle==2.4.0
+pycosat==0.6.3
+pycparser==2.18
+pycrypto==2.6.1
+pycurl==7.43.0.2
+pyflakes==2.0.0
+Pygments==2.2.0
+pyimgur==0.6.0
+pylint==1.9.2
+pyodbc==4.0.23
+pyOpenSSL==18.0.0
+pyowm==2.8.0
+pyparsing==2.2.0
+PySocks==1.6.8
+pytest==3.6.2
+pytest-arraydiff==0.2
+pytest-astropy==0.4.0
+pytest-doctestplus==0.1.3
+pytest-openfiles==0.3.0
+pytest-remotedata==0.3.0
+python-dateutil==2.7.3
+pytz==2018.4
+PyWavelets==0.5.2
+PyYAML==3.12
+pyzmq==17.0.0
+QtAwesome==0.4.4
+qtconsole==4.3.1
+QtPy==1.4.2
+ratelim==0.1.6
+regex==2018.6.21
+requests==2.18.4
+reverse-geocoder==1.5.1
+rope==0.10.7
+rtsimple==0.9.0
+ruamel-yaml==0.15.40
+scikit-image==0.13.0
+scikit-learn==0.19.1
+scipy==1.1.0
+seaborn==0.8.1
+selenium==2.53.6
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+simplejson==3.16.0
+singledispatch==3.4.0.3
+six==1.10.0
+sklearn==0.0
+-e git+https://github.com/sklearn-theano/sklearn-theano@3eba566d8b624885b75759de47e52f903c015e40#egg=sklearn_theano
+snowballstemmer==1.2.1
+sortedcollections==1.0.1
+sortedcontainers==2.0.4
+Sphinx==1.7.5
+sphinxcontrib-websupport==1.1.0
+spotipy==2.4.4
+spyder==3.2.8
+SQLAlchemy==1.2.8
+statsmodels==0.9.0
+stevedore==1.28.0
+sumy==0.7.0
+sympy==1.1.1
+tables==3.4.4
+tblib==1.3.2
+tensorboard==1.8.0
+tensorflow==1.8.0
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+Theano==1.0.2
+tmdbsimple==2.2.0
+toolz==0.9.0
+tornado==5.0.2
+traitlets==4.3.2
+turicreate==4.3.2
+typing==3.6.4
+tzlocal==1.5.1
+unicodecsv==0.14.1
+Unidecode==1.0.22
+url-summary==0.0.4
+urllib3==1.22
+vcrpy==1.12.0
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
+virtualenvwrapper==4.8.2
+wcwidth==0.1.7
+weather-api==1.0.4
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.2.1
+wikipedia==1.4.0
+wolframalpha==3.0.1
+wrapt==1.10.11
+WTForms==2.2.1
+xlrd==1.1.0
+XlsxWriter==1.0.5
+xlwings==0.11.8
+xlwt==1.2.0
+xmltodict==0.11.0
+yahoo-finance==1.4.0
+yarl==1.2.0
+zict==0.1.3
